<resources>
    <string name="app_name">HueTiful</string>
    <string name="title_home">Home</string>
    <string name="title_find">Find</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="home_title">Let’s find your</string>
    <string name="home_info">select an image</string>
    <string name="find_title">Let’s find the</string>
    <string name="generate">GENERATE</string>
    <string name="find">Find</string>
    <string name="home_title_end">!</string>
    <string name="tone">" Tone"</string>
    <string name="pair">" Pair"</string>
    <string name="dark_mode">Dark mode</string>
    <string name="title_settings_preference">Settings and Preference..</string>
    <string name="language">Language</string>
    <string name="lang_id">Bahasa Indonesia</string>
    <string name="lang_en">English</string>
    <string name="logout">Log out</string>
    <string name="item_saved_name">Saved</string>
    <string name="palate">Palate :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recomended_tone">Recommended tone</string>
    <string name="result">Result</string>
    <string name="detail">Detail</string>
    <string name="name">name</string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="welcome_title">Welcome to</string>
    <string name="get_started">Get Started!</string>
    <string name="email">email@domain.com</string>
    <string name="password">password</string>
    <string name="signup">Sign up</string>
    <string name="continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="alredy_have_account">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="lets_start">Let\'s get started!</string>
    <string name="welcome_quote">"Dare to be "</string>
    <string name="welcome_sub_quote">Life\'s too short for boring colors, isn\'t it?</string>
    <string name="welcome_quote2">"Be "</string>
    <string name="login_info">Please login to continue with your account</string>
    <string name="get_started_info">It\'s free and always will be</string>
    <string name="no_media_selected">No media selected</string>
    <string name="error_opening_camera">canceling opening camera</string>
    <string name="cannot_find_image">Cannot find image</string>
    <string name="failed_register_account">Failed to register your account</string>
    <string name="logout_info">Are you sure want to logout your account?</string>
    <string name="cancel">Cancel</string>
    <string name="email_verify_info">click on the email verification link sent to you on example@gmailcom</string>
    <string name="email_verify">We have sent you an email</string>
    <string name="email_verify_check">Didn’t receive the email yet?</string>
    <string name="email_verify_resend">sent again</string>
    <string name="next">Next</string>
    <string name="open_email">Open email app</string>
    <string name="password_reset_title">Forgot password?</string>
    <string name="password_reset_info">Don’t worry we got you covered. Please input your registered email below and click \' Send \'. we will sent you a new password</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot my password</string>
    <string name="item_saved">item saved!</string>
    <string name="empty_favorite_item">Empty favorite item</string>
    <string name="image_must_not_be_empty">Image must not be empty</string>
    <string name="white_hexsa">#FFFFFF</string>
</resources>