<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:src="@drawable/avd_logo"
        android:layout_width="500dp"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationX="180dp"
        android:translationY="-80dp"/>

    <TextView
        android:id="@+id/tv_quote1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/welcome_quote"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />


    <TextView
        android:id="@+id/tv_quote2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/welcome_quote2"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_quote1"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_sub_quote"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/tv_quote2"
        app:layout_constraintStart_toStartOf="@id/tv_quote2"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/lets_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>