<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.signup.SignUpActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_signup"
        android:layout_width="0dp"
        android:layout_height="450dp"
        app:cardCornerRadius="24dp"
        style="@style/CardBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationY="12dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_signup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginStart="24dp"
                android:text="@string/get_started"
                android:textStyle="bold"
                android:textSize="32sp"
                style="@style/TextColor"
                android:letterSpacing="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_signup_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="2dp"
                android:text="@string/get_started_info"
                android:textStyle="normal"
                android:textSize="14sp"
                style="@style/TextColor"
                android:letterSpacing="0.03"
                app:layout_constraintStart_toStartOf="@id/tv_signup_title"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_title"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="14dp"
                android:hint="@string/name"
                style="@style/EditTextColor"
                app:hintAnimationEnabled="true"
                app:boxStrokeWidth="0dp"
                app:layout_constraintStart_toStartOf="@id/tv_signup_info"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_info" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextBackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                style="@style/EditTextColor"
                app:boxStrokeWidth="0dp"
                app:layout_constraintStart_toStartOf="@id/ed_name_layout"
                app:layout_constraintTop_toBottomOf="@id/ed_name_layout"
                app:layout_constraintEnd_toEndOf="@id/ed_name_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextBackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                style="@style/EditTextColor"
                app:boxStrokeWidth="0dp"
                app:layout_constraintStart_toStartOf="@id/ed_email_layout"
                app:layout_constraintTop_toBottomOf="@id/ed_email_layout"
                app:layout_constraintEnd_toEndOf="@id/ed_email_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/EditTextBackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/signup"
                app:cornerRadius="8dp"
                app:layout_constraintStart_toStartOf="@id/ed_password_layout"
                app:layout_constraintTop_toBottomOf="@id/ed_password_layout"
                app:layout_constraintEnd_toEndOf="@id/ed_password_layout"/>

            <ProgressBar
                android:id="@+id/pb_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                tools:visibility="visible"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_signup">

                <TextView
                    android:id="@+id/tv_signup_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/alredy_have_account"
                    />

                <TextView
                    android:id="@+id/tv_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/login"
                    android:textColor="@color/red_700" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_background_image_signup"
        style="@style/WelcomeBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationY="-90dp"/>


    <TextView
        android:id="@+id/tv_title_app_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="34sp"
        android:letterSpacing="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_app_signup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:letterSpacing="0.06"
        app:layout_constraintStart_toStartOf="@id/tv_title_app_signup"
        app:layout_constraintTop_toBottomOf="@id/tv_title_app_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>