<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.signup.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="0dp"
        android:layout_height="450dp"
        app:cardCornerRadius="24dp"
        style="@style/CardBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationY="16dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="32sp"
                style="@style/TextColor"
                android:letterSpacing="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_login_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_info"
                android:textStyle="normal"
                android:textSize="14sp"
                style="@style/TextColor"
                android:letterSpacing="0.03"
                app:layout_constraintStart_toStartOf="@id/tv_login_title"
                app:layout_constraintTop_toBottomOf="@id/tv_login_title"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="28dp"
                android:hint="@string/email"
                style="@style/EditTextColor"
                app:boxStrokeWidth="0dp"
                app:layout_constraintStart_toStartOf="@id/tv_login_info"
                app:layout_constraintTop_toBottomOf="@id/tv_login_info" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextBackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                style="@style/EditTextColor"
                app:boxStrokeWidth="0dp"
                app:layout_constraintStart_toStartOf="@id/ed_login_layout"
                app:layout_constraintTop_toBottomOf="@id/ed_login_layout" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/EditTextBackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/login"
                app:cornerRadius="8dp"
                app:layout_constraintStart_toStartOf="@id/ed_password_layout"
                app:layout_constraintTop_toBottomOf="@id/ed_password_layout"/>

            <TextView
                android:id="@+id/btn_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/forgot_password"
                android:textColor="@color/red_100"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ProgressBar
                android:id="@+id/pb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                tools:visibility="visible"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login">

                <TextView
                    android:id="@+id/tv_login_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    style="@style/TextColor"
                    android:text="@string/dont_have_account"
                    app:layout_constraintTop_toBottomOf="@id/btn_login"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/tv_to_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/signup"
                    android:textColor="@color/red_700"
                    app:layout_constraintTop_toBottomOf="@id/btn_login"
                    app:layout_constraintStart_toEndOf="@id/btn_login"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_background_image_login"
        style="@style/WelcomeBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationY="-90dp"/>

    <TextView
        android:id="@+id/tv_title_app_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="34sp"
        android:letterSpacing="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_app_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:letterSpacing="0.06"
        app:layout_constraintStart_toStartOf="@id/tv_title_app_login"
        app:layout_constraintTop_toBottomOf="@id/tv_title_app_login" />
</androidx.constraintlayout.widget.ConstraintLayout>