<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_button_gradient_list"
    tools:context=".ui.activity.verification.VerificationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintDimensionRatio="1:1"
        android:backgroundTint="@color/white_100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/btn_back"
                android:src="@drawable/baseline_arrow_forward_ios_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scaleX="-1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/iv_email"
                android:src="@drawable/line_md_email"
                android:scaleType="centerCrop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email_verify"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/iv_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_email_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:text="@string/email_verify_info"
                android:textAlignment="center"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_email_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/ll_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_email_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_email_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_verify_check"
                    android:textAlignment="center"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/tv_email_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_email_resend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/email_verify_resend"
                    android:textAlignment="center"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/red_700"
                    app:layout_constraintTop_toBottomOf="@id/tv_email_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/open_email"
                android:textColor="@color/white"
                android:backgroundTint="@color/red_700"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@id/btn_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:backgroundTint="@color/red_100"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>