<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    style="@style/CardBackground"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/iv_door_logout"
            style="@style/LogoutIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_logout_info"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/logout_info"
            android:textSize="18sp"
            android:textAlignment="center"
            style="@style/TextColor"
            app:layout_constraintTop_toBottomOf="@id/iv_door_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_logout_info">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="30dp"
                android:background="@drawable/corner_rounder"
                android:backgroundTint="@color/red_100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btn_confirm_logout"
                app:layout_constraintTop_toBottomOf="@id/tv_logout_info"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm_logout"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:background="@drawable/corner_rounder"
                android:backgroundTint="@color/red_500"
                app:layout_constraintStart_toStartOf="@id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_logout_info"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>